[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menu/settings_menu/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/special/ControlFont.tres" type="DynamicFont" id=2]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 273.0
margin_top = 256.0
margin_right = 800.0
margin_bottom = 471.0

[node name="FullscreenCheckBox" type="CheckBox" parent="VBoxContainer"]
margin_right = 527.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen"

[node name="MuteCheckBox" type="CheckBox" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 527.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 2 )
text = "Mute Audio (not recommended)"

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 527.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 2 )
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 151.0
margin_right = 527.0
margin_bottom = 167.0
min_value = -40.0
max_value = 5.0

[node name="BackButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 537.0
margin_right = 184.0
margin_bottom = 584.0
custom_fonts/font = ExtResource( 2 )
text = "GO BACK"

[connection signal="pressed" from="VBoxContainer/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_pressed"]
[connection signal="pressed" from="VBoxContainer/MuteCheckBox" to="." method="_on_MuteCheckBox_pressed"]
[connection signal="drag_ended" from="VBoxContainer/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_drag_ended"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
